[package]
name = "logistic-map"
version = "0.1.0"
authors = ["Adam Shirey <adam@shirey.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.12"
imageproc = "0.22.0"


[profile.release]
lto = "fat"
#codegen-units = 1
